# Basic_vst3_rust

./: Cargo.toml  README.md
basic_plugin/: Cargo.toml
basic_plugin/src/: editor.rs  lib.rs  main.rs  mod.rs
basic_plugin/src/editor/: knob.rs  svg.rs
