[package]
name = "basic_vst3_plugin"
version = "0.1.0"
edition = "2021"
authors = ["Patricia Bronckers"]
description = "A Basic VST3 plugin"

[lib]
# cdylib is for VST3 (?)
# lib is for standalone
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git" }

atomic_refcell = "0.1"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "1d9806d5bd92275d0d8142d9c9c90198757b9b25" }
crossbeam = "0.8"
# This targets iced 0.4
   iced_baseview = { git = "https://github.com/robbert-vdh/iced_baseview.git", branch = "feature/update-baseview", default-features = false }
# To make the state persistable
serde = { version = "1.0", features = ["derive"] }
atomic_float = "1.1.0"

num-traits = "0.2"




[features]
svg = []





# NOTE: wgpu support has been removed from the iced-baseview fork out because
#       this old iced version uses a wgpu version that doesn't pin the web-sys
#       version it uses, and web-sys broke semver
# # Use wgpu rendering, which translates to Vulkan, Metal, or Direct3D12 depending
# # on the platform.
# # NOTE: The OpenGL support in baseview is not used, this is just a workaround
# #       for a rust analyzer bug. See the comment in lib.rs.
#wgpu = ["iced_baseview/wgpu", "baseview/opengl"]
# Use OpenGL instead of wgpu for the rendering. This should increase platform
# compatibility at the cost of some iced features not being available.

# # Enables using system fonts for the wgpu backend
# wgpu_default_system_font = ["iced_baseview/wgpu_default_system_font"]
# Enables using system fonts for the OpenGL backend
#opengl_default_system_font = ["iced_baseview/glow_default_system_font"]

# # Enables the `Canvas` widget for the wgpu backend
# wgpu_canvas = ["iced_baseview/wgpu_canvas"]
# Enables the `Canvas` widget for the OpenGL backend
#opengl_canvas = ["iced_baseview/glow_canvas"]




# Enables a debug view in native platforms (press F12)
debug = ["iced_baseview/debug"]
